# gcgc

./: .bumpversion.cfg  .coveragerc  .cz.toml  .dockerignore  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pydocstylerc  .pyre_configuration  .travis.yml  .yeyo.json  .yeyo.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  Taskfile.yml  VERSION  dev-requirements.txt  docker-compose.yml  justfile  mkdocs.yml  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  main.workflow
.github/workflows/: build_docs.yml  publish-docs.yml  publish.yml  run_tests.yml
docs/: Makefile  Third-Party-Libraries.md  cli.md  conf.py  encoding_alphabets.md  encoding_seq.md  fields.md  index.md  index.rst  installation.rst  make.bat  sequence_parsers.md  usage.rst
docs/concepts/: encoding_alphabets.md  encoding_seq.md  fields.md  rollouts.md  sam_file_support.md
docs/examples/: encoder-decoder.py  profile-gan.md  splice-site.md
docs/reference/: BioSequencePiece.md  KmerTokenizer.md  SequenceTokenizer.md  ThirdParty.md
docs/stylesheets/: extra.css
docs/third_party_integrations/: pytorch_utils.md
gcgc/: __init__.py  alphabet.py  alphabets.py  cli.py  cli_utils.py  exceptions.py  fasta_generator.py  third_party.py  vocab.py
gcgc/alphabet/: __init__.py  alphabet.py  base.py  iupac.py  utils.py
gcgc/data/: __init__.py
gcgc/data/splice/: EI.fasta  IE.fasta  N.fasta
gcgc/datasets/: __init__.py  dataset.py
gcgc/encoded_seq/: __init__.py  encoded_seq.py
gcgc/fields/: __init__.py  categorical_field.py  field.py
gcgc/ml/: __init__.py
gcgc/ml/pytorch_utils/: __init__.py  data.py  parser.py
gcgc/parser/: __init__.py  base.py  gcgc_record.py
gcgc/random/: __init__.py
gcgc/rollout/: __init__.py
gcgc/seq_record/: __init__.py  seq_record.py
gcgc/tests/: __init__.py  cli.py  test_gcgc.py  test_third_party.py
gcgc/tests/alignment/: __init__.py  test_alignment.py
gcgc/tests/alphabet/: test_alphabet.py  test_utils.py
gcgc/tests/cli/: __init__.py  test_cli.py
gcgc/tests/datasets/: __init__.py  test_datasets.py
gcgc/tests/encoded_seq/: __init__.py  test_encoded_seq.py
gcgc/tests/fields/: __init__.py  test_fields.py
gcgc/tests/fixtures/: __init__.py
gcgc/tests/fixtures/PF12057/: PF12057.fasta
gcgc/tests/fixtures/ecoli/: ecoli.fasta  ecoli2.fasta
gcgc/tests/fixtures/globin_alignment/: PF01152_full.fasta  PF01152_seed.sto
gcgc/tests/fixtures/p53_human/: p53_human.fasta  p53_human.tf_records
gcgc/tests/parser/: __init__.py  test_parser.py
gcgc/tests/rollout/: __init__.py  test_rollout.py
gcgc/tests/seq_record/: test_seq_record.py
gcgc/tests/test_models/: split.tsv  test_keras_model.py
gcgc/tests/tokenizer/: __init__.py  test_base_tokenizer.py  test_kmer_tokenizer.py  test_sp_tokenizer.py  test_tokenizer.py
gcgc/tests/vocab/: test_vocab.py
gcgc/tokenizer/: __init__.py  base.py  kmer_tokenzier.py  sentence_piece_tokenizer.py
gcgc/vocab/: __init__.py  kmer_vocab.py
notebooks/: HF Datasets Example.ipynb
