[tool.poetry]
name = "gcgc"
version = "0.12.0-dev.8"
description = "GCGC is a preprocessing library for biological sequence model development."
authors = ["Trent Hauck <trent@trenthauck.com>"]

readme = "README.md"

homepage = "http://gcgc.trenthauck.com/"
repository = "https://github.com/tshauck/gcgc"

license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"
numpy = "=1.15.2"
click = "^7.0"
pydantic = "^1.1"
typing-extensions = "^3.7"

sentencepiece = { version = "^0.1", optional = true }
biopython = { version = "^1.76", optional = true }

[tool.poetry.extras]
sentencepiece = ["sentencepiece", "biopython"]

[tool.poetry.dev-dependencies]
pytest = "^5.0"
black = "=18.9b0"
mypy = "=0.641"
mypy-extensions = "=0.4.1"
pycodestyle = "=2.4.0"
pydocstyle = "=4.0.1"
python-language-server = "=0.21.2"
ipdb = "^0.11.0"
flake8 = "^3.6"
pytest-cov = "^2.6"
mkdocs = "^1.0"
mkdocs-material = "^3.0"
pygments = "^2.3"
pyre-check = "^0.0.18"
isort = "^4.3"

[tool.poetry.plugins."console_scripts"]
"gcgc" = "gcgc.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
   #\.git
 #| \.mypy_cache
 #| \.tox
 #| build
 #| dist
)/
'''
