[tool.poetry]
name = "gcgc"
version = "0.12.0-dev.11"
description = "GCGC is a preprocessing library for biological sequence model development."
authors = ["Trent Hauck <trent@trenthauck.com>"]

readme = "README.md"

homepage = "http://gcgc.trenthauck.com/"
repository = "https://github.com/tshauck/gcgc"

license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"
click = "^7.0"
pydantic = "^1.1"
typing-extensions = "^3.7"

sentencepiece = { version = "^0.1", optional = true }
biopython = { version = "^1.76", optional = true }

[tool.poetry.extras]
sentencepiece = ["sentencepiece", "biopython"]

[tool.poetry.dev-dependencies]
pytest = "^5.0"
black = "=18.9b0"
mypy = "^0"
mypy-extensions = "^0"
pycodestyle = "=2.4.0"
pydocstyle = "=4.0.1"
python-language-server = "=0.21.2"
ipdb = "^0.11.0"
pytest-cov = "^2.6"
mkdocs = "^1.0"
mkdocs-material = "^3.0"
pygments = "^2.3"
pyre-check = "^0.0.18"
isort = "^4.3"
pylint = "^2.4"

[tool.poetry.plugins."console_scripts"]
"gcgc" = "gcgc.cli:cli"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
   #\.git
 #| \.mypy_cache
 #| \.tox
 #| build
 #| dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

