[metadata]
license = MIT
name = gcgc
author = Trent Hauck
author_email = trent@trenthauck.com
description = GCGC is a preprocessing library for biological sequence model development.
long_description = file:README.md
url = http://gcgc.trenthauck.com/

project_urls =
    homepage = http://gcgc.trenthauck.com/
    repository = https://github.com/tshauck/gcgc

[options]
packages =
    gcgc

python_requires = >=3.6.1, <4.0
install_requires=
    pydantic >=1.6.1

[options.extras_require]
pytorch = biopython> =1.78; torch ~=1.6
hf = biopython >=1.78; torch ~=1.6; transformers ==3.1.0; datasets ==1.1.0
dev =
    pytest ~=5.0
    black ~=19.10b0
    mypy
    mypy-extensions
    pycodestyle ~=2.4
    pydocstyle ~=4.0
    pytest-cov ~=2.6
    mkdocs==1.1.2
    mkdocs-material==4.6.3
    phmdoctest
    mkdocstrings
    commitizen
    pygments ~=2.3
    isort ~=4.3
    pylint ~=2.4
    twine ~=3.2

setup_requires =
    setuptools_scm >= 1.15

include_package_data = True
